--- a/train-ticket-workflow.yaml
+++ b/train-ticket-workflow.yaml
@@ -12,52 +12,70 @@ spec:
       children:
         - tt-chaos
     - name: network-chaos
-      templateType: NetworkChaos
+      templateType: Schedule
       deadline: 600s
-      networkChaos:
-        selector:
-          namespaces:
-            - train-ticket
-        mode: one
-        action: bandwidth
-        bandwidth:
-          rate: 2mbps
-          limit: 2
-          buffer: 2
-        direction: to
+      schedule:
+        schedule: '0 * * * *'
+        concurrencyPolicy: Forbid
+        type: NetworkChaos
+        networkChaos:
+          selector:
+            namespaces:
+              - train-ticket
+          mode: one
+          action: bandwidth
+          bandwidth:
+            rate: 2mbps
+            limit: 2
+            buffer: 2
+          direction: to
     - name: pod-chaos
-      templateType: PodChaos
+      templateType: Schedule
       deadline: 600s
-      podChaos:
-        selector:
-          namespaces:
-            - train-ticket
-        mode: one
-        action: pod-kill
+      schedule:
+        schedule: '15 * * * *' 
+        concurrencyPolicy: Forbid 
+        type: PodChaos    
+        podChaos:
+          selector:
+            namespaces:
+              - train-ticket
+          mode: one
+          action: pod-kill
+
     - name: cpu-chaos
-      templateType: StressChaos
+      templateType: Schedule
       deadline: 600s
-      stressChaos:
-        selector:
-          namespaces:
-            - train-ticket
-        mode: one
-        stressors:
-          cpu:
-            workers: 3
-            load: 70
+      schedule:
+        schedule: '30 * * * *'
+        concurrencyPolicy: Forbid
+        type: StressChaos
+        stressChaos:
+          selector:
+            namespaces:
+              - train-ticket
+          mode: one
+          stressors:
+            cpu:
+              workers: 3
+              load: 70
+
     - name: memory-stress
-      templateType: StressChaos
+      templateType: Schedule
       deadline: 600s
-      stressChaos:
-        selector:
-          namespaces:
-            - train-ticket
-        mode: one
-        stressors:
-          memory:
-            workers: 3
-            size: 512MB
+      schedule:
+        schedule: '45 * * * *'
+        concurrencyPolicy: Forbid
+        type: StressChaos
+        stressChaos:
+          selector:
+            namespaces:
+              - train-ticket
+          mode: one
+          stressors:
+            memory:
+              workers: 3
+              size: 512MB
     - name: tt-chaos
       templateType: Serial
       deadline: 4h
