--- a/train-ticket-workflow.yaml
+++ b/train-ticket-workflow.yaml
@@ -14,68 +14,59 @@ spec:
     - name: network-chaos
       templateType: Schedule
       deadline: 600s
-      schedule:
-        schedule: '0 * * * *'
-        concurrencyPolicy: Forbid
-        type: NetworkChaos
-        networkChaos:
-          selector:
-            namespaces:
-              - train-ticket
-          mode: one
-          action: bandwidth
-          bandwidth:
-            rate: 2mbps
-            limit: 2
-            buffer: 2
-          direction: to
+      type: NetworkChaos
+      networkChaos:
+        selector:
+          namespaces:
+            - train-ticket
+        mode: all
+        action: bandwidth
+        bandwidth:
+          rate: 2mbps
+          limit: 2
+          buffer: 2
+        direction: to
+
     - name: pod-chaos
       templateType: Schedule
       deadline: 600s
-      schedule:
-        schedule: '15 * * * *' 
-        concurrencyPolicy: Forbid 
-        type: PodChaos    
-        podChaos:
-          selector:
-            namespaces:
-              - train-ticket
-          mode: one
-          action: pod-kill
+      type: PodChaos    
+      podChaos:
+        selector:
+          namespaces:
+            - train-ticket
+        mode: one
+        action: pod-kill
 
     - name: cpu-chaos
       templateType: Schedule
       deadline: 600s
-      schedule:
-        schedule: '30 * * * *'
-        concurrencyPolicy: Forbid
-        type: StressChaos
-        stressChaos:
-          selector:
-            namespaces:
-              - train-ticket
-          mode: one
-          stressors:
-            cpu:
-              workers: 3
-              load: 70
+      type: StressChaos
+      stressChaos:
+        selector:
+          namespaces:
+            - train-ticket
+        mode: one
+        stressors:
+          cpu:
+            workers: 3
+            load: 70
 
     - name: memory-stress
       templateType: Schedule
       deadline: 600s
-      schedule:
-        schedule: '45 * * * *'
-        concurrencyPolicy: Forbid
-        type: StressChaos
-        stressChaos:
-          selector:
-            namespaces:
-              - train-ticket
-          mode: one
-          stressors:
-            memory:
-              workers: 3
-              size: 512MB
+      type: StressChaos
+      stressChaos:
+        selector:
+          namespaces:
+            - train-ticket
+        mode: one
+        stressors:
+          memory:
+            workers: 3
+            size: 512MB
+
+            
     - name: tt-chaos
       templateType: Serial
       deadline: 4h
